# star_mos

./: .gitignore  README.md  check.py  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/admin/: analysis_tools.py  chart_cache.py  routes.py
app/main/: audio_utils.py  routes.py  utils.py  video_utils.py
app/static/css/: main.css
app/static/js/: admin.js  experiment.js
app/templates/admin/: dashboard.html  generate_charts.html  login.html  system_scores.html
app/templates/main/: experiment.html  thanks.html  welcome.html
