[project]
name = "star-mos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.6.2",
    "click==8.1.7",
    "contourpy==1.1.1",
    "cycler==0.11.0",
    "flask==2.3.3",
    "fonttools==4.42.1",
    "importlib-metadata==6.8.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "kiwisolver==1.4.5",
    "librosa==0.10.1",
    "markupsafe==2.1.3",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "packaging==23.1",
    "pandas==2.1.1",
    "pillow==10.0.1",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "seaborn==0.12.2",
    "six==1.16.0",
    "soundfile==0.12.1",
    "tzdata==2023.3",
    "werkzeug==2.3.7",
    "zipp==3.17.0",
]
